--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -7,8 +7,8 @@
     gap: 16px;
   
     border-radius: 10px;
-    box-shadow: 4px 4px 4px lightblue;
-    background-color: aliceblue;
+    box-shadow: 4px 4px 4px rgb(51, 66, 71);
+    background-color: rgb(133, 136, 138);
     margin-bottom: 24px;
   }
   
@@ -16,9 +16,10 @@
     padding: 10px 20px;
     margin: 0 auto;
     font-weight: bold;
-    background-color: rgb(118, 200, 238);
+    background-color: rgb(194, 201, 203);
     border: none;
     border-radius: 8px;
+    cursor: pointer;
   }
   
   .contactForm label {
@@ -36,12 +37,12 @@
     padding: 8px 20px;
     height: 32px;
     border-radius: 6px;
-    border: 2px solid rgb(118, 200, 238);
+    border: 2px solid rgb(39, 43, 45);
     transition: all 300ms ease;
   }
   
   .formInput:focus,
   .formInput:active {
-    border: 2px solid blue;
+    border: 2px solid rgb(173, 173, 180);
     outline: none;
   }
