--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -3,8 +3,8 @@
     margin: 0 auto;
     width: 400px;
     border-radius: 10px;
-    box-shadow: 4px 4px 4px lightblue;
-    background-color: aliceblue;
+    box-shadow: 4px 4px 4px rgb(61, 63, 63);
+    background-color: rgb(222, 228, 233);
     margin-bottom: 24px;
   }
   
@@ -19,11 +19,11 @@
     padding: 8px 20px;
     height: 32px;
     border-radius: 6px;
-    border: 2px solid rgb(118, 200, 238);
+    border: 2px solid rgb(144, 146, 147);
     transition: all 300ms ease;
   }
   
   .serchInput:focus {
-    border: 2px solid blue;
+    border: 2px solid rgb(70, 70, 72);
     outline: none;
   }
